# bci-query-engine

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: cache.py  db.py  engine.py  mailer.py  main.py  models.py  renderer.py
docs/: ai-client-setup-prompts.md  client-onboarding-manual.md  codex-handoff-2026-05-25.md  practice-publication-query-engine-handover-2026-06-09.md  query-engine-blueprint.md  query-engine-high-level.md
scripts/: seed_srp_quick_artifact.py  seed_srp_quick_email_artifact.py
templates/: srp_visit_counts_quick.html
tests/: conftest.py  test_cache.py  test_engine_cache.py  test_main_auth.py
